--- a/LudoTech/Base.lproj/Main.storyboard
+++ b/LudoTech/Base.lproj/Main.storyboard
@@ -147,12 +147,15 @@
                                     <outlet property="delegate" destination="l9l-ug-CQy" id="yZf-dg-FiO"/>
                                 </connections>
                             </textField>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kTp-pu-f9T">
-                                <rect key="frame" x="0.0" y="-162" width="320" height="162"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JIo-4g-xM9">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="438" width="400" height="162"/>
+                                    <rect key="frame" x="288" y="308" width="22" height="22"/>
                                 </variation>
-                            </pickerView>
+                                <connections>
+                                    <segue destination="Jae-nQ-B4c" kind="show" id="kq5-5r-RWd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -161,7 +164,7 @@
                                 <exclude reference="pEg-WD-2qE"/>
                                 <exclude reference="xci-cA-fH1"/>
                                 <exclude reference="56W-o5-j96"/>
-                                <exclude reference="kTp-pu-f9T"/>
+                                <exclude reference="JIo-4g-xM9"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -170,7 +173,7 @@
                                 <include reference="pEg-WD-2qE"/>
                                 <include reference="xci-cA-fH1"/>
                                 <include reference="56W-o5-j96"/>
-                                <include reference="kTp-pu-f9T"/>
+                                <include reference="JIo-4g-xM9"/>
                             </mask>
                         </variation>
                     </view>
@@ -188,7 +191,6 @@
                     </navigationItem>
                     <keyCommands/>
                     <connections>
-                        <outlet property="listType" destination="kTp-pu-f9T" id="epK-Ng-EBo"/>
                         <outlet property="name" destination="pEg-WD-2qE" id="j8s-F7-Tfj"/>
                         <outlet property="type" destination="56W-o5-j96" id="1l0-Ui-Bb8"/>
                     </connections>
@@ -1081,6 +1083,42 @@
                                     <outlet property="delegate" destination="1sw-uY-bua" id="eHq-Zh-8SR"/>
                                 </connections>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ta-gu-PHe">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="304" y="251" width="22" height="22"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="lxs-Io-eY0" kind="show" id="pmp-Km-EZS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BQm-Lm-Xgw">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="304" y="327" width="22" height="22"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="KMl-7t-75r" kind="show" id="dvN-L0-fzM"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nW1-L9-J8U">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="304" y="365" width="22" height="22"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="v5m-Gb-5j7" kind="show" id="8OE-P2-NBE"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -1095,6 +1133,9 @@
                                 <exclude reference="xlz-kK-2ro"/>
                                 <exclude reference="bIJ-2M-OS9"/>
                                 <exclude reference="YCK-4C-R6f"/>
+                                <exclude reference="2ta-gu-PHe"/>
+                                <exclude reference="BQm-Lm-Xgw"/>
+                                <exclude reference="nW1-L9-J8U"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -1109,6 +1150,9 @@
                                 <include reference="xlz-kK-2ro"/>
                                 <include reference="bIJ-2M-OS9"/>
                                 <include reference="YCK-4C-R6f"/>
+                                <include reference="2ta-gu-PHe"/>
+                                <include reference="BQm-Lm-Xgw"/>
+                                <include reference="nW1-L9-J8U"/>
                             </mask>
                         </variation>
                     </view>
@@ -1478,6 +1522,18 @@
                                     <rect key="frame" x="116" y="288" width="76" height="21"/>
                                 </variation>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L1N-9O-Raj">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="305" y="288" width="22" height="22"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="HK7-7y-E2J" kind="show" id="XWf-Cy-ABf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -1488,6 +1544,7 @@
                                 <exclude reference="AxL-1k-R6H"/>
                                 <exclude reference="Sbk-3O-LPg"/>
                                 <exclude reference="2x3-h0-Q7s"/>
+                                <exclude reference="L1N-9O-Raj"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -1498,6 +1555,7 @@
                                 <include reference="AxL-1k-R6H"/>
                                 <include reference="Sbk-3O-LPg"/>
                                 <include reference="2x3-h0-Q7s"/>
+                                <include reference="L1N-9O-Raj"/>
                             </mask>
                         </variation>
                     </view>
@@ -1607,6 +1665,18 @@
                                     <rect key="frame" x="99" y="308" width="76" height="21"/>
                                 </variation>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLy-ih-gtv">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="288" y="308" width="22" height="22"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="HK7-7y-E2J" kind="show" id="5QM-2w-MlN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -1615,6 +1685,7 @@
                                 <exclude reference="rmF-69-VdY"/>
                                 <exclude reference="j0X-Yl-gFA"/>
                                 <exclude reference="hRC-mq-1dT"/>
+                                <exclude reference="HLy-ih-gtv"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -1623,6 +1694,7 @@
                                 <include reference="rmF-69-VdY"/>
                                 <include reference="j0X-Yl-gFA"/>
                                 <include reference="hRC-mq-1dT"/>
+                                <include reference="HLy-ih-gtv"/>
                             </mask>
                         </variation>
                     </view>
@@ -2533,4 +2605,11 @@
         <image name="first" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="a6O-SM-8BQ"/>
+        <segue reference="kq5-5r-RWd"/>
+        <segue reference="8OE-P2-NBE"/>
+        <segue reference="pmp-Km-EZS"/>
+        <segue reference="dvN-L0-fzM"/>
+    </inferredMetricsTieBreakers>
 </document>
