--- a/LudoTech/Base.lproj/Main.storyboard
+++ b/LudoTech/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
@@ -72,7 +72,7 @@
                                 <connections>
                                     <outlet property="nameGame" destination="dyi-bz-Iah" id="N4v-gA-VGe"/>
                                     <outlet property="type" destination="wtx-a6-V12" id="q9K-hk-QZO"/>
-                                    <segue destination="qnh-Rt-IQJ" kind="show" identifier="gameSegue" id="UCQ-LG-IaD"/>
+                                    <segue destination="JDu-YM-Zlf" kind="show" identifier="gameToVariant" id="2dS-ca-GKE"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -267,23 +267,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ycw-Ds-lZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3601.5" y="-417"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="CX4-KE-deG">
-            <objects>
-                <navigationController id="qnh-Rt-IQJ" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="o3N-gk-VRn">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="JDu-YM-Zlf" kind="relationship" relationship="rootViewController" id="SVZ-m2-AZf"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XdR-dm-efE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2671.5" y="-417"/>
+            <point key="canvasLocation" x="2874" y="-401"/>
         </scene>
         <!--Editions & Extensions-->
         <scene sceneID="3eD-2D-qlC">
